--- a/views/order_form.ejs
+++ b/views/order_form.ejs
@@ -18,6 +18,7 @@
 
 </head>
 <body>
+        <script>$(".discount-amount-container").hide();</script>
         <div class="header">
                 <a href="/"><h1 class="header-title">Ackbee</h1></a>
                 <div class="bag-menu">
@@ -152,7 +153,6 @@
                 </div>
         </div>
         <script>
-                $(".discount-amount-container").hide();
                 $(".place-order").click(function () {
                         $("form").submit();
                 });
