--- a/views/cups.ejs
+++ b/views/cups.ejs
@@ -44,8 +44,8 @@
                         <div class="categories">
                                 <select name="category" id="category">
                                         <option value="" disabled selected hidden>Shop by Category</option>
-                                        <option value="double">Double Layer</option>
-                                        <option value="single">Single Layer</option>
+                                        <option value="Double">Double Layer</option>
+                                        <option value="Single">Single Layer</option>
                                         <option value="cold">Cold Cups</option>
 
                                 </select>
